# chris_streaming_workers

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  Dockerfile.event_forwarder  Dockerfile.log_consumer  Dockerfile.log_forwarder  Dockerfile.sse_service  Dockerfile.status_consumer  Dockerfile.test  Dockerfile.test.dockerignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  justfile  pyproject.toml
.github/workflows/: ci.yml
chris_streaming/common/: container_naming.py  k8s_leader.py  kafka.py  pfcon_status.py  quickwit.py  redis_stream.py  schemas.py  settings.py  stream_metrics.py
chris_streaming/event_forwarder/: __main__.py  docker_watcher.py  eos_producer.py  k8s_watcher.py  producer.py  watcher.py
chris_streaming/log_consumer/: __main__.py  consumer.py  opensearch_writer.py  quickwit_writer.py  redis_publisher.py
chris_streaming/log_forwarder/: __init__.py  __main__.py  forwarder.py  k8s_tailer.py  tailer.py
chris_streaming/sse_service/: __main__.py  app.py  dispatcher.py  pfcon_client.py  redis_subscriber.py  routes.py  tasks.py
chris_streaming/status_consumer/: __main__.py  consumer.py  db.py  notifier.py
config/: init-test-data.sh
config/fluent-bit/: enrich-k8s.lua  enrich.lua  fluent-bit-k8s.conf  fluent-bit.conf  parsers-k8s.conf
config/kafka/: init-kafka.sh  kafka_server_jaas.conf  server.properties
config/opensearch/: index-template.json
config/quickwit/: job-logs-index.yaml
kubernetes/: 00-namespace.yaml  README.md  kustomization.yaml
kubernetes/20-infra/: fluent-bit.yaml  kafka.yaml  opensearch.yaml  postgres.yaml  quickwit.yaml  redis-ha.yaml  redis.yaml
kubernetes/30-pfcon/: init-test-data-job.yaml  pfcon-rbac.yaml  pfcon-storage.yaml  pfcon.yaml
kubernetes/40-workers/: celery-worker.yaml  event-forwarder-rbac.yaml  event-forwarder.yaml  log-consumer.yaml  log-forwarder.yaml  sse-service.yaml  status-consumer.yaml
kubernetes/50-ui/: test-ui.yaml
kubernetes/tests/: 00-test-namespace.yaml  e2e-tests-job.yaml  integration-stack.yaml  integration-tests-job.yaml  kustomization.yaml  unit-tests-job.yaml
test_ui/: Dockerfile  nginx-k8s.conf  nginx.conf
test_ui/static/: app.js  index.html
tests/: conftest.py
tests/e2e/: conftest.py  test_workflow_e2e.py
tests/integration/: conftest.py  test_kafka_roundtrip.py  test_log_consumer_reclaim.py  test_opensearch_writer.py  test_postgres.py  test_quickwit.py  test_redis_pubsub.py  test_sse_health.py
tests/unit/test_common/: test_container_naming.py  test_k8s_leader.py  test_kafka.py  test_pfcon_status.py  test_quickwit.py  test_redis_stream.py  test_schemas.py  test_settings.py  test_stream_metrics.py
tests/unit/test_event_forwarder/: test_docker_watcher.py  test_eos_producer.py  test_k8s_watcher.py  test_producer.py
tests/unit/test_log_consumer/: test_consumer.py  test_opensearch_writer.py  test_quickwit_writer.py  test_reclaim.py  test_redis_publisher.py
tests/unit/test_log_forwarder/: test_forwarder.py  test_k8s_tailer.py  test_tailer.py
tests/unit/test_sse_service/: test_app.py  test_dispatcher.py  test_pfcon_client.py  test_redis_subscriber.py  test_routes.py  test_tasks.py
tests/unit/test_status_consumer/: test_consumer.py  test_notifier.py
