[project]
name = "chris-streaming-workers"
version = "0.1.0"
description = "Event-driven streaming workers for ChRIS compute observability"
requires-python = ">=3.12"
dependencies = [
    # Shared base: data validation + settings
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
]

[project.optional-dependencies]
event-forwarder = [
    "aiokafka>=0.11,<1",
    "cramjam>=2.8,<3",
    "aiodocker>=0.23,<1",
    "kubernetes-asyncio>=31,<33",
    "structlog>=24.4,<26",
]
status-consumer = [
    "aiokafka>=0.11,<1",
    "cramjam>=2.8,<3",
    "celery[redis]>=5.4,<6",
    "structlog>=24.4,<26",
]
log-consumer = [
    "aiokafka>=0.11,<1",
    "cramjam>=2.8,<3",
    "opensearch-py[async]>=2.7,<3",
    "redis[hiredis]>=5.2,<6",
    "structlog>=24.4,<26",
]
sse-service = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sse-starlette>=2.2,<3",
    "redis[hiredis]>=5.2,<6",
    "celery[redis]>=5.4,<6",
    "opensearch-py[async]>=2.7,<3",
    "psycopg2-binary>=2.9,<3",
    "requests>=2.31,<3",
]
all = [
    "chris-streaming-workers[event-forwarder,status-consumer,log-consumer,sse-service]",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-mock>=3.14,<4",
    "httpx>=0.27,<1",
    "respx>=0.22,<1",
    "ruff>=0.8,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["chris_streaming*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require Docker Compose infrastructure (deselect with '-m \"not integration\"')",
    "e2e: marks end-to-end tests that require the full stack (all services running)",
]
